# media-tagger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md
src/: App.tsx  api.ts  index.css  theme.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  folder.rs  hash.rs  lib.rs  main.rs  models.rs  scanner.rs
src/components/: DetailPanel.tsx  FileList.tsx  FileListFilter.tsx  FolderTree.tsx  ImportExportDialog.tsx  MediaFullscreenViewer.tsx  MediaPreview.tsx  MediaThumbnail.tsx  ScanDialog.tsx  TagManager.tsx
