[package]
name = "media-tagger"
version = "1.0.0"
description = "Local media tagging desktop app with content-hash based labels"
authors = ["acliunianc"]
license = "MIT"
repository = "https://github.com/acliunianc/media-tagger"
homepage = "https://github.com/acliunianc/media-tagger"
edition = "2021"

[lib]
name = "media_tagger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1"
walkdir = "2"
glob = "0.3"
chrono = "0.4"
thiserror = "2"
parking_lot = "0.12"
once_cell = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
